--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "typeit-react": "^2.7.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://Da1re.github.io/magazine-rack",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.3"
   }
 }
