--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^6.2.1",
+    "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-color": "^2.14.0",
+    "@tiptap/extension-font-family": "^2.14.0",
+    "@tiptap/extension-highlight": "^2.14.0",
+    "@tiptap/extension-link": "^2.14.0",
+    "@tiptap/extension-text-align": "^2.14.0",
+    "@tiptap/extension-text-style": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.30",
-    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "animejs": "^3.2.2",
     "autoprefixer": "^10.4.21",
@@ -28,6 +36,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "tinymce": "^6.8.4",
     "typeit-react": "^2.6.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -60,6 +69,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react": "^19.1.8",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.17"
   }
