--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/react-dom": "^19.1.6",
     "animejs": "^3.2.2",
     "autoprefixer": "^10.4.21",
+    "ckeditor4": "4.22.1",
+    "ckeditor4-react": "4.1.0",
     "gsap": "^3.12.5",
     "postcss": "^8.5.4",
     "react": "^18.3.1",
@@ -69,6 +71,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/ckeditor4": "^4.20.7",
     "@types/react": "^19.1.8",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.17"
